--- a/index.html
+++ b/index.html
@@ -6,11 +6,41 @@
         <link rel="stylesheet" href="styles/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        <script type="module" src="scripts/main.js"></script>
     </head>
 
     <body>
         <main>
-            <p>Hello World</p>
+            <div class="head-wrapper">
+                <h1>Financial Saver</h1>
+            </div>
+            <br>
+            <div class="checking-table-wrapper">
+                <table id="c-table">
+                    <tr id="c-row1">
+                        <td><h2>Checking Account</h2></td>
+                    </tr>
+                    <tr id="c-row2">
+                        <td><h3>Total Balance</h3></td>
+                        <td><input type="text" id="c-bal"></td>
+                    </tr>
+                    <tr id="c-row3">
+                        <td><h3>Pending Bills</h3></td>
+                    </tr>
+                    <tr id="c-row4">
+                        <td></td>
+                        <td><button id="c-bil-add" onclick="add_checking_bill();">Add</button></td>
+                    </tr>
+                    <tr id="c-row5">
+                        <td><h3>Buffer Amount</h3></td>
+                        <td><input type="text" id="c-buf"></td>
+                    </tr>
+                    <tr id="c-row6">
+                        <td><h3>Transfer to Savings</h3></td>
+                        <td><p id="c-tran">0</p></td>
+                    </tr>
+                </table>
+            </div>
         </main>
     </body>
 </html>
