--- a/index.html
+++ b/index.html
@@ -17,28 +17,30 @@
             <br>
             <div class="checking-table-wrapper">
                 <table id="c-table">
-                    <tr id="c-row1">
-                        <td><h2>Checking Account</h2></td>
-                    </tr>
-                    <tr id="c-row2">
-                        <td><h3>Total Balance</h3></td>
-                        <td><input type="text" id="c-bal"></td>
-                    </tr>
-                    <tr id="c-row3">
-                        <td><h3>Pending Bills</h3></td>
-                    </tr>
-                    <tr id="c-row4">
-                        <td></td>
-                        <td><button id="c-bil-add" onclick="add_checking_bill();">Add</button></td>
-                    </tr>
-                    <tr id="c-row5">
-                        <td><h3>Buffer Amount</h3></td>
-                        <td><input type="text" id="c-buf"></td>
-                    </tr>
-                    <tr id="c-row6">
-                        <td><h3>Transfer to Savings</h3></td>
-                        <td><p id="c-tran">0</p></td>
-                    </tr>
+                    <tbody>
+                        <tr id="c-row-0">
+                            <td><h2>Checking Account</h2></td>
+                        </tr>
+                        <tr id="c-row-1">
+                            <td><h3>Total Balance</h3></td>
+                            <td><input type="text" id="c-bal"></td>
+                        </tr>
+                        <tr id="c-row-2">
+                            <td><h3>Pending Bills</h3></td>
+                        </tr>
+                        <tr id="c-row-3">
+                            <td></td>
+                            <td><button id="c-bil-add">Add</button></td>
+                        </tr>
+                        <tr id="c-row-4">
+                            <td><h3>Buffer Amount</h3></td>
+                            <td><input type="text" id="c-buf"></td>
+                        </tr>
+                        <tr id="c-row-5">
+                            <td><h3>Transfer to Savings</h3></td>
+                            <td><p id="c-tran">0</p></td>
+                        </tr>
+                    </tbody>
                 </table>
             </div>
         </main>
