--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h1>Financial Saver</h1>
             </div>
             <br>
-            <div class="checking-table-wrapper">
+            <div class="c-table-wrap">
                 <table id="c-table">
                     <tbody>
                         <tr id="c-row-0">
