--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         </tr>
                         <tr id="c-row-1">
                             <td><h3>Total Balance</h3></td>
-                            <td><input type="text" id="c-bal"></td>
+                            <td><input type="text" class="c-input" id="c-bal"></td>
                         </tr>
                         <tr id="c-row-2">
                             <td><h3>Pending Bills</h3></td>
@@ -34,7 +34,7 @@
                         </tr>
                         <tr id="c-row-4">
                             <td><h3>Buffer Amount</h3></td>
-                            <td><input type="text" id="c-buf"></td>
+                            <td><input type="text" class="c-input" id="c-buf"></td>
                         </tr>
                         <tr id="c-row-5">
                             <td><h3>Transfer to Savings</h3></td>
