--- a/index.html
+++ b/index.html
@@ -43,6 +43,27 @@
                     </tbody>
                 </table>
             </div>
+            <div class="s-table-wrap">
+                <table id="s-table">
+                    <tbody>
+                        <tr id="s-row-0">
+                            <td><h2>Savings Account</h2></td>
+                        </tr>
+                        <tr id="s-row-1">
+                            <td><h3>Total Balance</h3></td>
+                            <td><input type="text" class="c-input" id="c-bal"></td>
+                        </tr>
+                        <tr id="s-row-2">
+                            <td><h3>Savings Buckets</h3></td>
+                            <td><h4>Balance</h4></td>
+                            <td><h4>Rate</h4></td>
+                            <td><h4>Limit</h4></td>
+                            <td><h4>Reccomended</h4></td>
+                            <td><h4>Actual</h4></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </main>
     </body>
 </html>
