--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         </tr>
                         <tr id="s-row-1">
                             <td><h3>Total Balance</h3></td>
-                            <td><input type="text" class="c-input" id="c-bal"></td>
+                            <td><input type="text" class="s-input" id="s-bal"></td>
                         </tr>
                         <tr id="s-row-2">
                             <td><h3>Savings Buckets</h3></td>
@@ -60,6 +60,22 @@
                             <td><h4>Limit</h4></td>
                             <td><h4>Reccomended</h4></td>
                             <td><h4>Actual</h4></td>
+                        </tr>
+                        <tr id="s-row-3">
+                            <td><h4>Bucket #1</h4></td>
+                            <td><input type="text" class="s-input" id="s-bkt-bal-0"></td>
+                            <td><input type="text" class="s-input" id="s-bkt-rat-0"></td>
+                            <td><input type="text" class="s-input" id="s-bkt-lim-0"></td>
+                            <td><p id="s-bkt-rec-0">0</p></td>
+                            <td><input type="text" class="s-input" id="s-bkt-act-0"></td>
+                        </tr>
+                        <tr id="s-row-4">
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td><button id="s-bkt-add">Add</button></td>
                         </tr>
                     </tbody>
                 </table>
