--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <td><h4>Balance</h4></td>
                             <td><h4>Rate</h4></td>
                             <td><h4>Limit</h4></td>
-                            <td><h4>Reccomended</h4></td>
+                            <td><h4>Recommended</h4></td>
                             <td><h4>Actual</h4></td>
                         </tr>
                         <tr id="s-row-3">
@@ -76,6 +76,22 @@
                             <td></td>
                             <td></td>
                             <td><button id="s-bkt-add">Add</button></td>
+                        </tr>
+                        <tr id="s-row-5">
+                            <td><h3>Loans</h3></td>
+                            <td><h4>Balance</h4></td>
+                            <td><h4>Rate</h4></td>
+                            <td></td>
+                            <td><h4>Recommended</h4></td>
+                            <td><h4>Actual</h4></td>
+                        </tr>
+                        <tr id="s-row-6">
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td><button id="s-lon-add">Add</button></td>
                         </tr>
                     </tbody>
                 </table>
