--- a/index.html
+++ b/index.html
@@ -93,6 +93,22 @@
                             <td></td>
                             <td><button id="s-lon-add">Add</button></td>
                         </tr>
+                        <tr id="s-row-5">
+                            <td><h3>Investments</h3></td>
+                            <td><h4>Balance</h4></td>
+                            <td><h4>Rate</h4></td>
+                            <td><h4>Limit</h4></td>
+                            <td><h4>Recommended</h4></td>
+                            <td><h4>Actual</h4></td>
+                        </tr>
+                        <tr id="s-row-6">
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td><button id="s-inv-add">Add</button></td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
