--- a/index.html
+++ b/index.html
@@ -58,19 +58,16 @@
                             <td><h4>Balance</h4></td>
                             <td><h4>Rate</h4></td>
                             <td><h4>Limit</h4></td>
-                            <td><h4>Recommended</h4></td>
-                            <td><h4>Actual</h4></td>
+                            <td><h4>Transfer</h4></td>
                         </tr>
                         <tr id="s-row-3">
                             <td><h4>Bucket #1</h4></td>
                             <td><input type="text" class="s-input" id="s-bkt-bal-0"></td>
                             <td><input type="text" class="s-input" id="s-bkt-rat-0"></td>
                             <td><input type="text" class="s-input" id="s-bkt-lim-0"></td>
-                            <td><p id="s-bkt-rec-0">0</p></td>
-                            <td><input type="text" class="s-input" id="s-bkt-act-0"></td>
+                            <td><p id="s-bkt-tran-0">0</p></td>
                         </tr>
                         <tr id="s-row-4">
-                            <td></td>
                             <td></td>
                             <td></td>
                             <td></td>
@@ -82,11 +79,9 @@
                             <td><h4>Balance</h4></td>
                             <td><h4>Rate</h4></td>
                             <td></td>
-                            <td><h4>Recommended</h4></td>
-                            <td><h4>Actual</h4></td>
+                            <td><h4>Transfer</h4></td>
                         </tr>
                         <tr id="s-row-6">
-                            <td></td>
                             <td></td>
                             <td></td>
                             <td></td>
@@ -98,11 +93,9 @@
                             <td><h4>Balance</h4></td>
                             <td><h4>Rate</h4></td>
                             <td><h4>Limit</h4></td>
-                            <td><h4>Recommended</h4></td>
-                            <td><h4>Actual</h4></td>
+                            <td><h4>Transfer</h4></td>
                         </tr>
                         <tr id="s-row-6">
-                            <td></td>
                             <td></td>
                             <td></td>
                             <td></td>
