--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
                             <td><input type="text" class="c-input" id="c-bal"></td>
                         </tr>
                         <tr id="c-row-2">
-                            <td><h3>Pending Bills</h3></td>
+                            <td><h3>Bills</h3></td>
                         </tr>
                         <tr id="c-row-3">
                             <td></td>
                             <td><button id="c-bil-add">Add</button></td>
                         </tr>
                         <tr id="c-row-4">
-                            <td><h3>Buffer Amount</h3></td>
+                            <td><h3>Buffer</h3></td>
                             <td><input type="text" class="c-input" id="c-buf"></td>
                         </tr>
                         <tr id="c-row-5">
-                            <td><h3>Transfer to Savings</h3></td>
+                            <td><h3>Transfer</h3></td>
                             <td><p id="c-tran">0</p></td>
                         </tr>
                     </tbody>
