Make Transfer an Input

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <td><input type="text" class="s-input" id="s-bkt-bal-0"></td>
                             <td><input type="text" class="s-input" id="s-bkt-rat-0"></td>
                             <td><input type="text" class="s-input" id="s-bkt-lim-0"></td>
-                            <td><p id="s-bkt-tran-0">0</p></td>
+                            <td><input type="text" class="s-input" id="s-bkt-tran-0"></td>
                         </tr>
                         <tr id="s-row-4">
                             <td></td>
