--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                             <td><h4>Rate</h4></td>
                             <td><h4>Limit</h4></td>
                             <td><h4>Transfer</h4></td>
+                            <td><h4>Lock</h4></td>
                         </tr>
                         <tr id="s-row-3">
                             <td><h4>Bucket #1</h4></td>
@@ -66,8 +67,10 @@
                             <td><input type="text" class="s-input" id="s-bkt-rat-0"></td>
                             <td><input type="text" class="s-input" id="s-bkt-lim-0"></td>
                             <td><input type="text" class="s-input" id="s-bkt-tran-0"></td>
+                            <td><input type="checkbox" id="s-bkt-lock-0"></td>
                         </tr>
                         <tr id="s-row-4">
+                            <td></td>
                             <td></td>
                             <td></td>
                             <td></td>
@@ -80,8 +83,10 @@
                             <td><h4>Rate</h4></td>
                             <td></td>
                             <td><h4>Transfer</h4></td>
+                            <td><h4>Lock</h4></td>
                         </tr>
                         <tr id="s-row-6">
+                            <td></td>
                             <td></td>
                             <td></td>
                             <td></td>
@@ -94,8 +99,10 @@
                             <td><h4>Rate</h4></td>
                             <td><h4>Limit</h4></td>
                             <td><h4>Transfer</h4></td>
+                            <td><h4>Lock</h4></td>
                         </tr>
                         <tr id="s-row-6">
+                            <td></td>
                             <td></td>
                             <td></td>
                             <td></td>
