Minor Bug Fixes

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <td><input type="text" class="s-input" id="s-bkt-rat-0"></td>
                             <td><input type="text" class="s-input" id="s-bkt-lim-0"></td>
                             <td><input type="text" class="s-input" id="s-bkt-tran-0"></td>
-                            <td><input type="checkbox" id="s-bkt-lock-0"></td>
+                            <td><input type="checkbox" class="s-input" id="s-bkt-lock-0"></td>
                         </tr>
                         <tr id="s-row-4">
                             <td></td>
